# Imagix_Crystal_Ball_RE

./: .gitignore  CREDITS.md  README.md
cmd1_stub/: CMakeLists.txt  README.md  sdkconfig.defaults
cmd1_stub/components/cmd1/: CMakeLists.txt  cmd1_patch.c  cmd1_patch.h
cmd1_stub/main/: CMakeLists.txt  app_main.c
docs/: ADDRESS_CORRECTIONS.md  AUDIT.md  SESSION_SUMMARY.md  anim_display_hook.md  asset_update_protocol.md  bench_decloud_steps.md  character_info_format.md  decloud_endpoint.md  decloud_runbook.md  downchannel_reconnect.md  dumping_guide.md  esp32s3_firmware_analysis.md  fan_tcp_protocol.md  flash_layout.md  function_registry.md  hardware_overview.md  hc32_blade_analysis.md  nvs_config_reference.md  nvs_keys.md  observed_protocol.md  orb_animation_authoring_spec.md  pov_display_format.md  protocol_capture.md  roadmap.md  sound_pack_planning.md  syncing_tracking_format.md  system_audio.md  tools.md  tts_fred_opus.md  wifi_provisioning.md
examples/: character_info_eb1_64_REAL.json  character_info_template.json  syncing_tracking_new_character.json  syncing_tracking_overwrite_slot.json
server/: README.md  orb_server.py
tools/: build_orb.py  extract_cmd1.py  find_padding.py  make_wifi_spiffs.py  nvs_parse.py  nvs_set.py  orb_decoder.py  orb_encode.py  orb_lock_calibrate.py  patch_authmode_none.py  patch_boot_audio.py  patch_cert_trust.py  patch_pin_endpoint.py  patch_system_audio.py  reprovision.py  splice_patch.py  stage_anims.sh
